[package]
name = "prometheus"
version = "0.1.0"
authors = ["Moises Silva <moises.silva@gmail.com>"]

[dependencies]
# Use custom tiny-http until PR 116 is merged
# https://github.com/frewsxcv/tiny-http/pull/116
# tiny_http = "0.5.2"
tiny_http = { git = "https://github.com/moises-silva/tiny-http.git", rev = "feature/recv-with-timeout" }
sys-info = "0.4.1"
time = "0.1.35"
log = "*"
slog = "0.7.0"
slog-term = "0.7.0"
slog-stdlog = "0.7.0"
